--- a/TrabajandoConLibrerias/feo/feo.vcxproj.filters
+++ b/TrabajandoConLibrerias/feo/feo.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="PlayerP.cpp">
       <Filter>Archivos de código fuente</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyBase.cpp">
+      <Filter>Archivos de código fuente</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerP.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyBase.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
