Dos enemigos diferentes

--- a/TrabajandoConLibrerias/feo/feo.vcxproj
+++ b/TrabajandoConLibrerias/feo/feo.vcxproj
@@ -133,12 +133,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Beatle.cpp" />
     <ClCompile Include="EnemyBase.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PlayerP.cpp" />
     <ClCompile Include="Radroach.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Beatle.h" />
     <ClInclude Include="EnemyBase.h" />
     <ClInclude Include="PlayerP.h" />
     <ClInclude Include="Radroach.h" />
