--- a/TrabajandoConLibrerias/feo/feo.vcxproj.filters
+++ b/TrabajandoConLibrerias/feo/feo.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="Game.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Clima.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
