--- a/TrabajandoConLibrerias/feo/feo.vcxproj
+++ b/TrabajandoConLibrerias/feo/feo.vcxproj
@@ -79,7 +79,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML-2.4.2\lib;$(SolutionDir)VLD\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib;opengl32.lib;openal32.lib;winmm.lib;gdi32.lib;freetype.lib;jpeg.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib;sfml-main-d.lib;opengl32.lib;openal32.lib;winmm.lib;gdi32.lib;freetype.lib;jpeg.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>copy $(SolutionDir)SFML-2.4.2\bin\openal32.dll $(SolutionDir)Debug
@@ -91,7 +91,9 @@ copy $(SolutionDir)SFML-2.4.2\bin\sfml-network-d-2.dll $(SolutionDir)Debug
 copy $(SolutionDir)VLD\bin\Win32\dbghelp.dll $(SolutionDir)Debug
 copy $(SolutionDir)VLD\bin\Win32\vld_x86.dll $(SolutionDir)Debug
 copy $(SolutionDir)VLD\bin\Win32\Microsoft.DTfW.DHL.manifest $(SolutionDir)Debug
-copy $(SolutionDir)feo\Assets\* $(SolutionDir)Debug</Command>
+cd $(SolutionDir)Debug
+md Assets
+copy $(SolutionDir)feo\Assets\* $(SolutionDir)Debug\Assets</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -120,12 +122,14 @@ copy $(SolutionDir)feo\Assets\* $(SolutionDir)Debug</Command>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>sfml-graphics-s.lib;sfml-window-s.lib;sfml-audio-s.lib;sfml-system-s.lib;opengl32.lib;openal32.lib;winmm.lib;gdi32.lib;freetype.lib;jpeg.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-graphics-s.lib;sfml-window-s.lib;sfml-audio-s.lib;sfml-system-s.lib;sfml-main.lib;opengl32.lib;openal32.lib;winmm.lib;gdi32.lib;freetype.lib;jpeg.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML-2.4.2\lib;$(SolutionDir)VLD\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <SubSystem>Windows</SubSystem>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(SolutionDir)feo\Assets\* $(SolutionDir)Release</Command>
+      <Command>cd Release
+md Assets
+copy $(SolutionDir)feo\Assets\* $(SolutionDir)Release\Assets</Command>
     </PostBuildEvent>
     <PreLinkEvent>
       <Command>copy $(SolutionDir)OpenAl32.dll $(SolutionDir)Release</Command>
