--- a/TrabajandoConLibrerias/feo/feo.vcxproj
+++ b/TrabajandoConLibrerias/feo/feo.vcxproj
@@ -79,10 +79,13 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(SolutionDir)SFML-2.4.2\lib;$(SolutionDir)VLD\lib\Win32;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>sfml-graphics-d.lib;sfml-window-d.lib;sfml-audio-d.lib;sfml-system-d.lib;sfml-main-d.lib;opengl32.lib;openal32.lib;winmm.lib;gdi32.lib;freetype.lib;jpeg.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>sfml-system-d.lib;sfml-window-d.lib;sfml-graphics-d.lib;sfml-audio-d.lib;sfml-main-d.lib;opengl32.lib;openal32.lib;winmm.lib;gdi32.lib;freetype.lib;jpeg.lib;flac.lib;vorbisenc.lib;vorbisfile.lib;vorbis.lib;ogg.lib;vld.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy "$(SolutionDir)SFML-2.4.2\bin\openal32.dll" "$(SolutionDir)Debug"
+      <Command>cd "$(SolutionDir)Debug"
+md Assets
+copy "$(SolutionDir)feo\Assets\*" "$(SolutionDir)Debug\Assets"
+copy "$(SolutionDir)SFML-2.4.2\bin\openal32.dll" "$(SolutionDir)Debug"
 copy "$(SolutionDir)SFML-2.4.2\bin\sfml-system-d-2.dll" "$(SolutionDir)Debug"
 copy "$(SolutionDir)SFML-2.4.2\bin\sfml-window-d-2.dll" "$(SolutionDir)Debug"
 copy "$(SolutionDir)SFML-2.4.2\bin\sfml-graphics-d-2.dll" "$(SolutionDir)Debug"
@@ -90,10 +93,7 @@ copy "$(SolutionDir)SFML-2.4.2\bin\sfml-audio-d-2.dll" "$(SolutionDir)Debug"
 copy "$(SolutionDir)SFML-2.4.2\bin\sfml-network-d-2.dll" "$(SolutionDir)Debug"
 copy "$(SolutionDir)VLD\bin\Win32\dbghelp.dll" "$(SolutionDir)Debug"
 copy "$(SolutionDir)VLD\bin\Win32\vld_x86.dll" "$(SolutionDir)Debug"
-copy "$(SolutionDir)VLD\bin\Win32\Microsoft.DTfW.DHL.manifest" "$(SolutionDir)Debug"
-cd "$(SolutionDir)Debug"
-md Assets
-copy "$(SolutionDir)feo\Assets\*" "$(SolutionDir)Debug\Assets"</Command>
+copy "$(SolutionDir)VLD\bin\Win32\Microsoft.DTfW.DHL.manifest" "$(SolutionDir)Debug"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
